--- a/code-structure/Makefile
+++ b/code-structure/Makefile
@@ -1,23 +1,23 @@
 dev:
-	rm -f .terraform/terraform.tfstate
+	rm -rf .terraform
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform apply -var-file=env-dev/inputs.tfvars
 
 
 prod:
-	rm -f .terraform/terraform.tfstate
+	rm -rf .terraform
 	terraform init -backend-config=env-prod/state.tfvars
 	terraform apply -var-file=env-prod/inputs.tfvars
 
 
 dev-destroy:
-	rm -f .terraform/terraform.tfstate
+	rm -rf .terraform
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform destroy -var-file=env-dev/inputs.tfvars
 
 
 prod-destroy:
-	rm -f .terraform/terraform.tfstate
+	rm -rf .terraform
 	terraform init -backend-config=env-prod/state.tfvars
 	terraform destroy -var-file=env-prod/inputs.tfvars
 
