--- a/code-structure/Makefile
+++ b/code-structure/Makefile
@@ -1,23 +1,23 @@
 dev:
-	rm -rf .terraform
+	rm -f terraform.tfstate
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform apply -auto-approve -var-file=env-dev/inputs.tfvars
 
 
 prod:
-	rm -rf .terraform
+	rm -f terraform.tfstate
 	terraform init -backend-config=env-prod/state.tfvars
 	terraform apply -auto-approve -var-file=env-prod/inputs.tfvars
 
 
 dev-destroy:
-	rm -rf .terraform
+	rm -f terraform.tfstate
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform destroy -auto-approve -var-file=env-dev/inputs.tfvars
 
 
 prod-destroy:
-	rm -rf .terraform
+	rm -f terraform.tfstate
 	terraform init -backend-config=env-prod/state.tfvars
 	terraform destroy -auto-approve -var-file=env-prod/inputs.tfvars
 
